# assets-v2

./: .dockerignore  .gitignore  Cargo.toml
.github/workflows/: release.yml
crates/exporter/: Cargo.toml
crates/exporter/src/: config.rs  tex.rs
server/: Dockerfile  go.mod  main.go
src/: config.rs  export.rs  main.rs  tex.rs
